fix: header nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ ul {
 
 li {
     display: inline-block;
-    margin-left: calc(var(--base-space) / 2);
+    margin-left: var(--base-space);
 }
 
 .btn {
